# academic-document-processor

./: .gitignore  Makefile  README.md  extract_text.py  parse_documents.py  print_utils.py  process_llm.py  pyproject.toml  report.py
