[project]
name = "document-processor"
version = "0.1.0"
description = "Python-based tool designed to automate the extraction and processing of academic documents from various accademic journals"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "instructor>=1.6.3",
    "openai>=1.54.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.4",
    "pydantic>=2.9.2",
    "python-docx>=1.1.2",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "ruff>=0.7.3",
]


[tool.ruff.lint]
# Linter rules grouped by tool
select = [
    "YTT", "S", "B", "A", "C4", "T10", "SIM", # flake8-based rules
    "I", # isort for import sorting
    "C90", # code complexity
    "E", "W", "F", # pycodestyle & pyflakes
    "PGH", "UP", "RUF", # pre-commit hooks & ruff specifics
]
ignore = [
    # Allow longer lines & lambda assignments
    "E501", "E731",
]

# Per-file ignore rules for tests
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S603"]

[tool.ruff.lint.isort]
# Enforce forward compatibility
required-imports = ["from __future__ import annotations"]
